--- a/NFL_DataSource_Research.ipynb
+++ b/NFL_DataSource_Research.ipynb
@@ -14,7 +14,7 @@
         "z4ELb8ABwBkD"
       ],
       "mount_file_id": "1qHpFA5iyEErnHdmFjC6SvvvX9tJ2L6K_",
-      "authorship_tag": "ABX9TyPSk9RiP4ODWp0nRcrZ9ob+",
+      "authorship_tag": "ABX9TyNXEI3ExLtIeuzzu7fUxIqx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -15451,7 +15451,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Not noticing any real trend with the variables (total_line, away_moneyline, spread_line) with passing tds. Rd fav qbs are passing over 1.5 tds though. But I got to explain it."
+        "Not noticing any real trend with the variables (total_line, away_moneyline, spread_line) with passing tds. Rd fav qbs are passing over 1.5 tds 61% of the time though. But I have to explain it."
       ],
       "metadata": {
         "id": "aKME0UiQGKay"
